syntax = "proto3";
package bitchan_pb;

message BlockHeader {
	bytes previous_block_header_hash = 1;
	bytes body_hash = 2;
	int64 timestamp = 3;
	uint64 nonce = 4;
	float difficulty = 5;
}

message BlockBody {
	repeated Transaction transactions = 1;
}

message Transaction {
	repeated TransactionInput transaction_inputs = 1;
	repeated TransactionOutput transaction_outputs = 2;
	string board_id = 3;
	bytes post_hash = 4;

	// Set only when the post is successive message in the thread.
	bytes thread_transaction_hash = 5;

	// "sage"
	bool downvoted = 6;
}

message TransactionInput {
	bytes previous_transaction_hash = 1;
	int32 previous_transaction_index = 2;
	bytes signature = 3;
	bytes pubic_key = 4;
}

message TransactionOutput {
	int64 amount = 1;
	bytes public_key_hash = 2;
}

message Post {
	string name = 1;
	string mail = 2;
	string content = 3;
	int64 timestamp = 4;

	// Set only when the post is successive message in the thread.
	bytes previous_transaction_hash = 5;

	// Set only when the post is the first message in the thread.
	string thread_title = 6;
}

message AddressRequest {
	string own_port = 1;
}

message AddressResponse {
	repeated Address address = 1;
}

message Address {
	string address = 1;
	// 160 bit kademlia ID
	bytes node_id = 2;
}

message BlockRequest {
	bytes block_hash = 1;
}

message BlockResponse {
	BlockHeader block_header = 1;
	BlockBody block_body = 2;
}

message PostRequest {
	bytes post_hash = 1;
}

message PostResponse {
	Post post = 1;
}

service Bitchan {
	rpc GetAddress (stream AddressRequest) returns (stream AddressResponse) {}
	rpc GetBlock (stream BlockRequest) returns (stream BlockResponse) {}
	rpc GetPost (stream PostRequest) returns (stream PostResponse) {}
}
